Updated pick the test

--- a/picktest.qmd
+++ b/picktest.qmd
@@ -19,15 +19,93 @@ Below is a walk through for the most common statistical analyses, but keep in mi
 
 -   **Poisson test** - if we are looking at the probability of obtaining certain counts over events - specifically, looking at the probability of *rare* events - we will use a Poisson. You can do this with `poisson.test`.
 
-## Explanatory Variable
+## Overview of picking the test
+
+Below is an overview of picking basic statistical tests. There are more complex tests, but these are the main ones to consider for exams in this course.
+
++--------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+
+|                          | Categorical Explanatory                                                                                                                                                                                                 | Continuous Explanatory                                                               |
++==========================+=========================================================================================================================================================================================================================+======================================================================================+
+| **Categorical Response** | -   $\chi^2$ tests, especially if count data for category                                                                                                                                                               | -   Logistic regression, modeling categorical responses across continuous variables. |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   Yate's correction auto-applied for 2x2 tables                                                                                                                                                                   |     -   Not covered in BIOL 305 at present                                           |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          | -   Fisher test is a 2x2 table                                                                                                                                                                                          |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          | -   Null is that counts match a known proportion (goodness-of-fit) or counts match each other (independence)                                                                                                            |                                                                                      |
++--------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+
+| **Continuous Response**  | -   Single mean to population                                                                                                                                                                                           | -   When looking at *if* there is a relationship, use correlation                    |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   This is a $Z$-score comparison, **when the population parameters are known**                                                                                                                                    |     -   $H_0: \rho = 0$                                                              |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   $H_0: \bar{x} = \mu$                                                                                                                                                                                        |     -   Evaluated using a $t$ statistic                                              |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   Almost always better to resort to $t$-test comparison if unsure is a population - $t$ approaches a $Z$ as $df \rightarrow \infty$                                                                               | -   When looking at *what* the relationship is, use linear regression                |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   $H_0: \mu_1 = \mu_2$                                                                                                                                                                                        |     -   Line formula is $y = \beta x + \alpha + \epsilon_i$                          |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          | -   Two measurements                                                                                                                                                                                                    |     -   Very similar to your high-school $y = mx +b$                                 |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   **Remember - all** $t$**-tests default to Welch's in *R*, assuming unequal variance**                                                                                                                           |     -   $H_0: \beta = 0$                                                             |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   When $\sigma^2_1 = \sigma^2_2$, Welch's $t$-test is the same as a standard $t$-test                                                                                                                         | -   Remember - linear regression works like an ANOVA, and has similar outputs        |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   Usually better to use Welch's, but justify reasoning                                                                                                                                                        |     -   Check the ANOVA page for more information!                                   |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   One-sample $t$-test, comparing the two groups                                                                                                                                                                   |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   $H_0: \mu_1 = \mu_2$                                                                                                                                                                                        |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          | -   Two samples                                                                                                                                                                                                         |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   Two-sample $t$-test, comparing the two samples                                                                                                                                                                  |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   $H_0: \mu_1 = \mu_2$                                                                                                                                                                                        |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          | -   Paired samples                                                                                                                                                                                                      |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   Special case - used when there are repeated measurements of the same sampling units                                                                                                                             |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   Need to set `paired = TRUE`                                                                                                                                                                                 |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   $H_0: \mu_d = 0$                                                                                                                                                                                            |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          | -   $\ge$ 3 samples                                                                                                                                                                                                     |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |     -   ANOVA - analysis of variance across multiple samples, computing variance within samples and between samples                                                                                                     |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   For all ANOVA, $H_0: \mu_1 = \mu_2 = ... \mu_i$                                                                                                                                                             |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   Single type of measurement is a one-way ANOVA                                                                                                                                                               |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   When things are "blocked" into categories - like litters - that are unique per row, use a randomized block ANOVA (remember to put `factor()` around anything you are worried won't be read as categorical!) |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |             -   `aov(response ~ explanatory + block, data)`                                                                                                                                                             |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   When things are individuals being repeatedly measured, use a repeated measures ANOVA (mathematically like randomized block ANOVA)                                                                           |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |             -   `aov(response ~ explanatory + individual, data)`                                                                                                                                                        |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |         -   When we are looking at more than one variable at once, you are doing an interactive ANOVA                                                                                                                   |                                                                                      |
+|                          |                                                                                                                                                                                                                         |                                                                                      |
+|                          |             -   `aov(response ~ explanatory1 + explanatory2 + explanatory1*explanatory2)`                                                                                                                               |                                                                                      |
++--------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------+
+
+: Which test to pick for which combinations of variables.
+
+## Another method - checklist
+
+Feel free to go through the following headings to also help you pick a test.
+
+### Explanatory Variable
 
 The explanatory variable is continuous and numeric. Pick this one for a continuous measurement variable, for example, such as Longitude, concentration, or other ratio or integer data.
 
 The explanatory variable is discontinuous and categorical. In these cases, the explanatory variable is a condition, like a control and a treatment.
 
-## Continuous explanatory variable
+### Continuous explanatory variable
 
-### Continuous response variable
+#### Continuous response variable
 
 If you have a continuous response variable, then you need to see what the question is asking:
 
@@ -41,15 +119,15 @@ If you are asking *what* the relationship is or looking to be able to *predict* 
 
 If we have multiple response variables, we can do multiple regression, which we do not cover here.
 
-### Discrete response variable
+#### Discrete response variable
 
 If you are looking at a discrete response variable, such as a state of 1 or 0 in response to a certain amount of stimulus, then you are doing a **logistic regression**. We did not cover this analysis in this class.
 
-## Discrete explanatory variable
+### Discrete explanatory variable
 
 For discrete explanatory variables, we are often looking at categorical treatments or distinct groups, like species or geographic locations.
 
-### Continuous response variable
+#### Continuous response variable
 
 For a continuous response variable, we need to ask ourselves how many categories we are dealing with.
 
@@ -67,6 +145,6 @@ If we are simply comparing multiple groups, we are performing a one-way ANOVA. W
 
 If we have multiple response variables, we can use a MANOVA; we do not cover that in this class.
 
-### Discrete response variable
+#### Discrete response variable
 
 If our response variable *and* our explanatory variable are discrete (i.e., categorical or nominal), then we are doing a $\chi^2$ **test**. This tests looks at counts in different categories. For example, looking at proportions of men and women who do and do not smoke would be a classic $\chi^2$ test.
